<?xml version="1.0"?>
<package format="2">
  <name>rosflight_sil</name>
  <version>0.0.0</version>
  <description>The rosflight_sil package</description>
  <maintainer email="andrew@todo.todo">andrew</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend> 
  <depend>rospy</depend>
  <depend>eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosflight_sim</depend>
  <depend>rosflight_firmware</depend>
  <depend>rosflight_msgs</depend>

</package>
